Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.22***

**	Support interface modports, bug200.  [by Thriller Wu]

***	Support 1800-2009 defines with default arguments.

***	Pedantic no longer disables `__FILE__ and `__LINE__ as they
	are now part of SystemVerilog 2009 (IEEE 1800-2009).

****	Fix memory leaks.  [Thriller Wu]

* Verilog::Language 3.223 2009/12/20

***	Support `undefineall.

****	Add implied "input" to function var callbacks.

****	Fix covergroup instantiation syntax error, bug192.  [Vesselin Kavalov]

****	Fix parsing enums with implicit types.

* Verilog::Language 3.222 2009/11/24

****	Fix missing ; in ContAssign::verilog_text, bug177.  [Nicolas Wilhelm]

****	Fix multi-dimensional arrayed typedefs, bug183.  [Vesselin Kavalov]

****	Fix "assert () else" action_blocks.  [Vesselin Kavalov]

****	Fix typedef scoping under anonymous begin blocks.

****	Fix `define argument mis-replacing system task of same name, bug191.

* Verilog::Language 3.221 2009/10/28

****	Fix SystemPerl hitting "undefined find_interface..." in 3.220.

****	Fix erroring on strings with backslashed newlines, bug168. [Pete Nixon]

****	Fix compile error on RHEL3 with gettext, bug169. [Marek Rouchal]

****	Fix line number miscounting with `pragma.

* Verilog::Language 3.220 2009/09/30

**	Add parsing of "assign", including SigParser::contassign callback,
	Netlist::ContAssign object, and related accessors.

***	Several code speedups to vhier, Verilog::Netlist, and the parsers.

***	Add Preproc::getall to fetch all text instead of line-by-line.

***	Add Parser::new(use_cb_{name}=>0) option to speed parsing.

***	Add SigParser/Netlist::new(use_vars=>0) option to speed parsing.

****	Fix deep defines causing flex scanner overflows. [Brad Dobbie]
