@@ -418,9 +418,11 @@ verilog/parser_sv.v:014: PORT  'addr' 'modport' 'output' '' '' '3'
 verilog/parser_sv.v:014: ENDMODPORT  'endmodport'
 verilog/parser_sv.v:015: ENDINTERFACE  'endinterface'
 verilog/parser_sv.v:017: MODULE  'module' 'test' undef '0'
-verilog/parser_sv.v:018: PORT  'whole_int' 'module' '' 'itf' '' '1'
+verilog/parser_sv.v:018: VAR  'port' 'whole_int' 'module' '' 'itf' '' ''
+verilog/parser_sv.v:018: PORT  'whole_int' 'module' 'interface' 'itf' '' '1'
 verilog/parser_sv.v:018: INSTANT  'itf' 'whole_int' ''
-verilog/parser_sv.v:019: PORT  'modported_int' 'module' '' 'itf' '' '2'
+verilog/parser_sv.v:019: VAR  'port' 'modported_int' 'module' '' 'itf.test' '' ''
+verilog/parser_sv.v:019: PORT  'modported_int' 'module' 'interface' 'itf.test' '' '2'
 verilog/parser_sv.v:019: INSTANT  'itf' 'modported_int' ''
 verilog/parser_sv.v:020: VAR  'port' 'clk' 'module' '' 'logic' '' ''
 verilog/parser_sv.v:020: PORT  'clk' 'module' 'input' 'logic' '' '3'
@@ -597,7 +599,8 @@ verilog/parser_sv.v:269: VAR  'member' 'm_b' 'struct' '' 'bit [7:0]' '' ''
 verilog/parser_sv.v:267: VAR  'typedef' 't_bug91' 'netlist' '' 'struct' '' ''
 verilog/parser_sv.v:271: VAR  'var' 'v_bug91' 'netlist' '' 't_bug91' '' ''
 verilog/parser_sv.v:273: MODULE  'module' 'bug98' undef '0'
-verilog/parser_sv.v:273: PORT  'x_if' 'module' '' 'interfacex' '' '1'
+verilog/parser_sv.v:273: VAR  'port' 'x_if' 'module' '' 'interfacex' '' ''
+verilog/parser_sv.v:273: PORT  'x_if' 'module' 'interface' 'interfacex' '' '1'
 verilog/parser_sv.v:273: INSTANT  'interfacex' 'x_if' ''
 verilog/parser_sv.v:274: INSTANT  'h' 'inst_h' ''
 verilog/parser_sv.v:274: PIN  'push' 'x_if.pop' '1'
