@@ -6,6 +6,7 @@ indicates the contributor was also the author of the fix; Thanks!
 * Verilog::Language 3.22***
 
 **	Support interface modports, bug200.  [by Thriller Wu]
+	Applications using interfaces may need to ignore the new callbacks.
 
 ***	Support 1800-2009 defines with default arguments.
 
